tests/cases/compiler-development/artifact/errors/diagnostic-private-struct-type.diagnostic
diagnostic error code=M0001 family=module message="struct 'Hidden::Secret' is not public" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/modules/errors/private-module-struct-type.ari" display="tests/cases/modules/errors/private-module-struct-type.ari" bytes=130
  Label index=0 role=primary source_id=0 source="tests/cases/modules/errors/private-module-struct-type.ari" line=8 column=9 end_line=8 end_column=15 byte_start=78 byte_end=84 message=""
  Snippet label=0 text="  --> tests/cases/modules/errors/private-module-struct-type.ari:8:9\n   |\n 8 |   item: Hidden::Secret,\n   |         ^^^^^^"
